--- a/Codebase/main.qsf
+++ b/Codebase/main.qsf
@@ -64,4 +64,6 @@ set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -fall
 set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -rise
 set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -fall
 set_global_assignment -name ACTIVE_SERIAL_CLOCK FREQ_100MHZ
+set_global_assignment -name VERILOG_FILE bianaryToBCD.v
+set_global_assignment -name VERILOG_FILE BCDToHex.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
