--- a/.gitignore
+++ b/.gitignore
@@ -1,102 +1,3 @@
-
-Codebase/db/main.asm.qmsg
-Codebase/db/main.asm.rdb
-Codebase/db/main.cmp.bpm
-Codebase/db/main.cmp.cdb
-Codebase/db/main.cmp.hdb
-Codebase/db/main.cmp.logdb
-Codebase/db/main.cmp.rdb
-Codebase/db/main.cyclonev_io_sim_cache.ff_0c_fast.hsd
-Codebase/db/main.cyclonev_io_sim_cache.tt_85c_slow.hsd
-Codebase/db/main.db_info
-Codebase/db/main.fit.qmsg
-Codebase/db/main.hier_info
-Codebase/db/main.hif
-Codebase/db/main.map.bpm
-Codebase/db/main.map.cdb
-Codebase/db/main.map.hdb
-Codebase/db/main.map.qmsg
-Codebase/db/main.map.rdb
-Codebase/db/main.map_bb.cdb
-Codebase/db/main.map_bb.hdb
-Codebase/db/main.pre_map.hdb
-Codebase/db/main.quiproj.1080.rdr.flock
-Codebase/db/main.rtlv.hdb
-Codebase/db/main.rtlv_sg.cdb
-Codebase/db/main.smart_action.txt
-Codebase/db/main.sta.qmsg
-Codebase/db/main.sta.rdb
-Codebase/db/main.sta_cmp.6_H6_slow_1100mv_85c.tdb
-Codebase/db/main.tis_db_list.ddb
-Codebase/db/main.tiscmp.fast_1100mv_0c.ddb
-Codebase/db/main.tiscmp.fast_1100mv_85c.ddb
-Codebase/db/main.tmw_info
-Codebase/incremental_db/compiled_partitions/main.root_partition.cmp.cdb
-Codebase/incremental_db/compiled_partitions/main.root_partition.cmp.hbdb.cdb
-Codebase/incremental_db/compiled_partitions/main.root_partition.cmp.hbdb.hdb
-Codebase/incremental_db/compiled_partitions/main.root_partition.cmp.hdb
-Codebase/incremental_db/compiled_partitions/main.root_partition.map.cdb
-Codebase/incremental_db/compiled_partitions/main.root_partition.map.dpi
-Codebase/incremental_db/compiled_partitions/main.root_partition.map.hbdb.cdb
-Codebase/incremental_db/compiled_partitions/main.root_partition.map.hbdb.hdb
-Codebase/incremental_db/compiled_partitions/main.root_partition.map.hdb
-Codebase/incremental_db/compiled_partitions/main.rrp.hdb
-Codebase/main.qws
-Codebase/output_files/main.asm.rpt
-Codebase/output_files/main.done
-Codebase/output_files/main.fit.rpt
-Codebase/output_files/main.fit.summary
-Codebase/output_files/main.flow.rpt
-Codebase/output_files/main.jdi
-Codebase/output_files/main.map.rpt
-Codebase/output_files/main.map.summary
-Codebase/output_files/main.sof
-Codebase/output_files/main.sta.rpt
-Codebase/output_files/main.sta.summary
-Codebase/db/main.asm.qmsg
-Codebase/db/main.asm.rdb
-Codebase/db/main.cmp.logdb
-Codebase/db/main.cmp.rdb
-Codebase/db/main.cyclonev_io_sim_cache.ff_0c_fast.hsd
-Codebase/db/main.cyclonev_io_sim_cache.tt_85c_slow.hsd
-Codebase/db/main.fit.qmsg
-Codebase/db/main.hier_info
-Codebase/db/main.hif
-Codebase/db/main.map.bpm
-Codebase/db/main.map.cdb
-Codebase/db/main.map.hdb
-Codebase/db/main.map.qmsg
-Codebase/db/main.map.rdb
-Codebase/db/main.map_bb.cdb
-Codebase/db/main.map_bb.hdb
-Codebase/db/main.pre_map.hdb
-Codebase/db/main.rtlv.hdb
-Codebase/db/main.rtlv_sg.cdb
-Codebase/db/main.smart_action.txt
-Codebase/db/main.sta.qmsg
-Codebase/db/main.sta.rdb
-Codebase/db/main.tis_db_list.ddb
-Codebase/db/main.tiscmp.fast_1100mv_0c.ddb
-Codebase/db/main.tiscmp.slow_1100mv_85c.ddb
-Codebase/db/prev_cmp_main.qmsg
-Codebase/incremental_db/compiled_partitions/main.root_partition.cmp.cdb
-Codebase/incremental_db/compiled_partitions/main.root_partition.cmp.hbdb.cdb
-Codebase/incremental_db/compiled_partitions/main.root_partition.cmp.hbdb.hdb
-Codebase/incremental_db/compiled_partitions/main.root_partition.cmp.hdb
-Codebase/incremental_db/compiled_partitions/main.root_partition.map.cdb
-Codebase/incremental_db/compiled_partitions/main.root_partition.map.dpi
-Codebase/incremental_db/compiled_partitions/main.root_partition.map.hbdb.cdb
-Codebase/incremental_db/compiled_partitions/main.root_partition.map.hbdb.hdb
-Codebase/incremental_db/compiled_partitions/main.root_partition.map.hdb
-Codebase/incremental_db/compiled_partitions/main.rrp.hdb
-Codebase/output_files/main.asm.rpt
-Codebase/output_files/main.done
-Codebase/output_files/main.fit.rpt
-Codebase/output_files/main.fit.summary
-Codebase/output_files/main.flow.rpt
-Codebase/output_files/main.jdi
-Codebase/output_files/main.map.rpt
-Codebase/output_files/main.map.summary
-Codebase/output_files/main.sof
-Codebase/output_files/main.sta.rpt
-Codebase/output_files/main.sta.summary
+Codebase/db
+Codebase/incremental_db
+Codebase/output_files
