--- a/Codebase/main.qsf
+++ b/Codebase/main.qsf
@@ -93,3 +93,4 @@ set_location_assignment PIN_W17 -to passwordCheck
 set_location_assignment PIN_AA14 -to addPassword
 set_location_assignment PIN_AF16 -to passwordCheck2
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VERILOG_FILE displaymodule.v
