--- a/Codebase/main.qsf
+++ b/Codebase/main.qsf
@@ -94,4 +94,7 @@ set_location_assignment PIN_AA14 -to addPassword
 set_location_assignment PIN_AF16 -to passwordCheck2
 set_global_assignment -name VERILOG_FILE displaymodule.v
 set_global_assignment -name VERILOG_FILE lettertohex.v
+set_global_assignment -name VERILOG_FILE keyboard.v
+set_location_assignment PIN_AB25 -to PS2_Clock
+set_location_assignment PIN_AA25 -to PS2_Data
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
