--- a/Codebase/main.qsf
+++ b/Codebase/main.qsf
@@ -67,34 +67,53 @@ set_global_assignment -name VERILOG_FILE bianaryToBCD.v
 set_global_assignment -name VERILOG_FILE BCDToHex.v
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
-set_location_assignment PIN_AB30 -to switch[0]
-set_location_assignment PIN_Y27 -to switch[1]
-set_location_assignment PIN_AB28 -to switch[2]
-set_location_assignment PIN_AC30 -to switch[3]
-set_location_assignment PIN_W25 -to switch[4]
-set_location_assignment PIN_V25 -to switch[5]
-set_location_assignment PIN_AC28 -to switch[6]
-set_location_assignment PIN_AD30 -to switch[7]
-set_location_assignment PIN_AC29 -to switch[8]
-set_location_assignment PIN_AA30 -to switch[9]
 set_location_assignment PIN_AA15 -to tryPassword
-set_location_assignment PIN_AC22 -to switchLED[9]
-set_location_assignment PIN_AA24 -to switchLED[0]
-set_location_assignment PIN_AB23 -to switchLED[1]
-set_location_assignment PIN_AC23 -to switchLED[2]
-set_location_assignment PIN_AD24 -to switchLED[3]
-set_location_assignment PIN_AG25 -to switchLED[4]
-set_location_assignment PIN_AF25 -to switchLED[5]
-set_location_assignment PIN_AE24 -to switchLED[6]
-set_location_assignment PIN_AF24 -to switchLED[7]
-set_location_assignment PIN_AB22 -to switchLED[8]
-set_location_assignment PIN_AK4 -to removePassword
-set_location_assignment PIN_W17 -to passwordCheck
 set_location_assignment PIN_AA14 -to addPassword
-set_location_assignment PIN_AF16 -to passwordCheck2
 set_global_assignment -name VERILOG_FILE displaymodule.v
 set_global_assignment -name VERILOG_FILE lettertohex.v
 set_global_assignment -name VERILOG_FILE keyboard.v
 set_location_assignment PIN_AB25 -to PS2_Clock
 set_location_assignment PIN_AA25 -to PS2_Data
+set_location_assignment PIN_AH18 -to sevenSeg0[6]
+set_location_assignment PIN_AG18 -to sevenSeg0[5]
+set_location_assignment PIN_AH17 -to sevenSeg0[4]
+set_location_assignment PIN_AG16 -to sevenSeg0[3]
+set_location_assignment PIN_AG17 -to sevenSeg0[2]
+set_location_assignment PIN_V18 -to sevenSeg0[1]
+set_location_assignment PIN_W17 -to sevenSeg0[0]
+set_location_assignment PIN_V17 -to sevenSeg1[6]
+set_location_assignment PIN_AE17 -to sevenSeg1[5]
+set_location_assignment PIN_AE18 -to sevenSeg1[4]
+set_location_assignment PIN_AD17 -to sevenSeg1[3]
+set_location_assignment PIN_AE16 -to sevenSeg1[2]
+set_location_assignment PIN_V16 -to sevenSeg1[1]
+set_location_assignment PIN_AF16 -to sevenSeg1[0]
+set_location_assignment PIN_W16 -to sevenSeg2[6]
+set_location_assignment PIN_AF18 -to sevenSeg2[5]
+set_location_assignment PIN_Y18 -to sevenSeg2[4]
+set_location_assignment PIN_Y17 -to sevenSeg2[3]
+set_location_assignment PIN_AA18 -to sevenSeg2[2]
+set_location_assignment PIN_AB17 -to sevenSeg2[1]
+set_location_assignment PIN_AA21 -to sevenSeg2[0]
+set_location_assignment PIN_AD20 -to sevenSeg3[6]
+set_location_assignment PIN_AA19 -to sevenSeg3[5]
+set_location_assignment PIN_AC20 -to sevenSeg3[4]
+set_location_assignment PIN_AA20 -to sevenSeg3[3]
+set_location_assignment PIN_AD19 -to sevenSeg3[2]
+set_location_assignment PIN_W19 -to sevenSeg3[1]
+set_location_assignment PIN_Y19 -to sevenSeg3[0]
+set_location_assignment PIN_AH22 -to sevenSeg4[6]
+set_location_assignment PIN_AF23 -to sevenSeg4[5]
+set_location_assignment PIN_AG23 -to sevenSeg4[4]
+set_location_assignment PIN_AE23 -to sevenSeg4[3]
+set_location_assignment PIN_AE22 -to sevenSeg4[2]
+set_location_assignment PIN_AG22 -to sevenSeg4[1]
+set_location_assignment PIN_AD21 -to sevenSeg4[0]
+set_location_assignment PIN_AB21 -to sevenSeg5[6]
+set_location_assignment PIN_AF19 -to sevenSeg5[5]
+set_location_assignment PIN_AE19 -to sevenSeg5[4]
+set_location_assignment PIN_AG20 -to sevenSeg5[3]
+set_location_assignment PIN_AF20 -to sevenSeg5[2]
+set_location_assignment PIN_AG21 -to sevenSeg5[1]
+set_location_assignment PIN_AF21 -to sevenSeg5[0]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
