--- a/Codebase/main.qsf
+++ b/Codebase/main.qsf
@@ -116,4 +116,5 @@ set_location_assignment PIN_AG20 -to sevenSeg5[3]
 set_location_assignment PIN_AF20 -to sevenSeg5[2]
 set_location_assignment PIN_AG21 -to sevenSeg5[1]
 set_location_assignment PIN_AF21 -to sevenSeg5[0]
+set_location_assignment PIN_AJ4 -to switch
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
