--- a/Codebase/main.qsf
+++ b/Codebase/main.qsf
@@ -68,7 +68,7 @@ set_global_assignment -name VERILOG_FILE BCDToHex.v
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_location_assignment PIN_AA15 -to tryPassword
-set_location_assignment PIN_AA14 -to addPassword
+set_location_assignment PIN_AK4 -to addPassword
 set_global_assignment -name VERILOG_FILE displaymodule.v
 set_global_assignment -name VERILOG_FILE lettertohex.v
 set_global_assignment -name VERILOG_FILE keyboard.v
@@ -116,5 +116,6 @@ set_location_assignment PIN_AG20 -to sevenSeg5[3]
 set_location_assignment PIN_AF20 -to sevenSeg5[2]
 set_location_assignment PIN_AG21 -to sevenSeg5[1]
 set_location_assignment PIN_AF21 -to sevenSeg5[0]
-set_location_assignment PIN_AJ4 -to switch
+set_location_assignment PIN_AJ4 -to addLetter
+set_location_assignment PIN_AA24 -to isValidPassword
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
